--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-geolocated": "^4.0.3",
